# mcp-agentic-security-escalation

./: .dockerignore  .gitignore  Dockerfile  RADSecurity_Complete.ipynb  RADSecurity_Security_Agent-TakeHome.ipynb  README.md  __init__.py  api.py  docker-compose.yml  main_security_agent_server.py  mcp_cve_client.py  mcp_cve_server.py  pyproject.toml  pytest.ini  rad_security_agent.md  rad_security_conclusion.md  rad_security_data_setup.md  rad_security_overview.md  rad_security_persistence.md  requirements.txt  run_analysis.py  setup.ps1  setup.sh
.ipynb_checkpoints/: RADSecurity_Security_Agent-TakeHome-checkpoint.ipynb
Documentation/: ARCHITECTURE.md  Service Topology Diagram.md  tree_structure.txt
Documentation/Example SQLite Table Entries/: example_incidents_analysis_table.txt  example_run_metadata_table.txt
data/: dummy_agent_incident_analyses.json  dummy_agent_incident_analyses_ORIGINAL.json  dummy_incidents.json  incident_analysis.db  incidents.json
dev/: clean_dummy_analyses.py  incident_dashboard.py  query_db.py
examples/: example_mcp_client.py  example_mcp_server.py
scripts/: README.md  build_faiss_indexes.py  build_historical_incident_analyses_index.py
setup/: README.md  __init__.py  build_faiss_KEV_and_NVD_indexes.py  build_historical_incident_analyses_index.py  build_historical_incident_index.py  download_cve_data.py  setup_initial_CVE_data_and_FAISS_indexes.sh
tests/: __init__.py  test_decorators.py  test_mcp_cve_server.py  test_retrieval_utils.py
utils/: __init__.py  clean_json.py  cve_tools.py  datastore_utils.py  decorators.py  flatteners.py  logging_utils.py  prompt_utils.py  pydantic_utils.py  retrieval_utils.py  retriever.py
