[project]
name = "mcp-agents-radsecurity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastmcp>=2.3.3",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "mcp[cli]>=1.8.1",
    "orjson>=3.10.18",
    "python-dotenv>=1.1.0",
    "yfinance>=0.2.61",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]
