[project]
name = "mcp_agents_radsecurity"
version = "0.1.0"
description = "MCP-based security analysis agents using LangChain"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Dan Guilliams", email = "dan.guilliams@danguilliams.com" }
]
dependencies = [
    "asyncio>=3.4.3",
    "faiss-cpu>=1.11.0",
    "fastmcp>=2.3.3",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-mcp-adapters>=0.0.11",
    "langchain-openai>=0.3.16",
    "langgraph>=0.4.3",
    "mcp[cli]>=1.8.1",
    "openai>=1.78.1",
    "orjson>=3.10.18",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "tiktoken>=0.9.0",
    "yfinance>=0.2.61",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "isort>=5.13.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
pythonpath = ["."] 
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
    "asyncio: mark test functions as async/await",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.ruff]
line-length = 100
target-version = "py312"

[project.urls]
Homepage = "https://github.com/dguilliams3/mcp-agents-radsecurity"
Repository = "https://github.com/dguilliams3/mcp-agents-radsecurity.git"

[tool.hatch.build.targets.wheel]
packages = ["."]
